--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
       // If this page is served over HTTPS, prefer HTTPS for the target so the
       // browser doesn't block the navigation due to mixed content when possible.
       const pageIsSecure = window.location.protocol === 'https:';
-      const defaultPort = 8080; // receiver uses 8080
+  const defaultPort = 8090; // send uses 8090 (use port 8090 when opening sender/relay)
       let targetBase;
       if (manualHost) {
         // If user provided a protocol, use it; otherwise prefer https on secure page.
@@ -952,7 +952,9 @@
           // Use top-level navigation (user gesture)
           window.location.href = targetBase;
         } else {
+          // If user cancels or navigation is blocked, show a direct link the user can open or copy
           showError('Cancelled. You can also try entering the host manually below.');
+          appendDirectLink(errorMessage, targetBase);
         }
       }, 200);
     }
@@ -1076,19 +1078,15 @@
             openBase = `http://${ip}:8080`;
           }
 
-          const openLink = `<div style="margin-top:8px;"><a href="${openBase}" target="_blank" rel="noopener noreferrer" style="color:#FFEB3B; text-decoration:underline;">Open ${openBase} in a new tab</a></div>`;
-
-          // On mobile Chromium, a visible button that uses a direct user gesture is often more reliable
-          if (isMobileChromium()) {
-            const btnHtml = `<div style="margin-top:10px;"><button class="connect-btn" onclick="openDeviceUrl('${openBase.replace(/'/g, '\\' + "'")}')">Open device (HTTP)</button></div>`;
-            receiveErrorMessage.innerHTML = escapeHtml(hint).replace(/\n/g, '<br>') + openLink + btnHtml;
-          } else {
-            // sanitize the hint text then append the open link
-            receiveErrorMessage.innerHTML = escapeHtml(hint).replace(/\n/g, '<br>') + openLink;
-          }
-
+          // Build a visible fallback that includes a clickable link, an Open button
+          // (user gesture) and a copy-to-clipboard button so the user can manually
+          // open the device when fetch/navigation is blocked.
+          receiveErrorMessage.textContent = escapeHtml(hint).replace(/\n/g, '\n');
           receiveErrorMessage.style.display = 'block';
           receiveSuccessMessage.style.display = 'none';
+
+          // Append a programmatic direct link UI
+          appendDirectLink(receiveErrorMessage, openBase);
         } else {
           showReceiveError(hint);
         }
@@ -1320,6 +1318,87 @@
     function hideReceiveMessages() {
       receiveErrorMessage.style.display = 'none';
       receiveSuccessMessage.style.display = 'none';
+    }
+
+    // Append a small UI to show a direct link with copy and open buttons.
+    function appendDirectLink(container, base) {
+      try {
+        // Remove previously added direct link wrappers to avoid duplicates
+        const prev = container.querySelector('.direct-link-wrapper');
+        if (prev) prev.remove();
+
+        const wrapper = document.createElement('div');
+        wrapper.className = 'direct-link-wrapper';
+        wrapper.style.marginTop = '10px';
+        wrapper.style.display = 'flex';
+        wrapper.style.gap = '8px';
+        wrapper.style.justifyContent = 'center';
+        wrapper.style.alignItems = 'center';
+
+        const a = document.createElement('a');
+        a.href = base;
+        a.target = '_blank';
+        a.rel = 'noopener noreferrer';
+        a.textContent = base;
+        a.style.color = '#FFEB3B';
+        a.style.textDecoration = 'underline';
+        a.style.fontSize = '13px';
+
+        const copyBtn = document.createElement('button');
+        copyBtn.className = 'connect-btn';
+        copyBtn.style.padding = '8px 10px';
+        copyBtn.style.fontSize = '13px';
+        copyBtn.textContent = 'Copy link';
+        copyBtn.addEventListener('click', (e) => {
+          e.preventDefault();
+          copyToClipboard(base).then(() => {
+            const prevText = copyBtn.textContent;
+            copyBtn.textContent = 'Copied!';
+            setTimeout(() => copyBtn.textContent = prevText, 1400);
+          }).catch(() => {
+            const prevText = copyBtn.textContent;
+            copyBtn.textContent = 'Copy failed';
+            setTimeout(() => copyBtn.textContent = prevText, 1400);
+          });
+        });
+
+        const openBtn = document.createElement('button');
+        openBtn.className = 'connect-btn';
+        openBtn.style.padding = '8px 10px';
+        openBtn.style.fontSize = '13px';
+        openBtn.textContent = 'Open device';
+        openBtn.addEventListener('click', (e) => { e.preventDefault(); openDeviceUrl(base); });
+
+        wrapper.appendChild(a);
+        wrapper.appendChild(copyBtn);
+        wrapper.appendChild(openBtn);
+
+        container.appendChild(wrapper);
+      } catch (e) {
+        // ignore UI append errors
+      }
+    }
+
+    function copyToClipboard(text) {
+      if (navigator.clipboard && navigator.clipboard.writeText) {
+        return navigator.clipboard.writeText(text);
+      }
+      return new Promise((resolve, reject) => {
+        try {
+          const ta = document.createElement('textarea');
+          ta.value = text;
+          ta.style.position = 'fixed';
+          ta.style.left = '-9999px';
+          document.body.appendChild(ta);
+          ta.focus();
+          ta.select();
+          const ok = document.execCommand('copy');
+          document.body.removeChild(ta);
+          if (ok) resolve(); else reject();
+        } catch (err) {
+          reject(err);
+        }
+      });
     }
 
   </script>
